fix overflow

--- a/src/scss/zeroing.scss
+++ b/src/scss/zeroing.scss
@@ -89,5 +89,5 @@ h6 {
 /* ------------------------ */ /* ------------------------ */ /* ------------------------ */
 .container {
   min-height: 100%;
-  overflow: hidden;
+  // overflow: hidden;
 }
